// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v30;

import "scalapb/scalapb.proto";

// Schema definition for the exported ACS snapshot
message ActiveContract {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  // The protocol version of the domain the contract is currently assigned to
  // Required
  int32 protocol_version = 1;
  // The ID of the domain where the contract was assigned at the time of the export
  // Required
  string domain_id = 2;
  // The raw binary containing the contract and its associated metadata
  // Required
  bytes contract = 3;
  // The number of times the contract has been reassigned at the time of the export
  // Required
  int64 reassignment_counter = 4;
}
